force-app/main/default/objects/Personnel__c/fields/Appt_Setter__c.field-meta.xml
<CustomField>
    <fullName>Appt_Setter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Appt Setter</label>
    <type>Checkbox</type>
</CustomField>