force-app/main/default/objects/Personnel__c/fields/Call_Center__c.field-meta.xml
<CustomField>
    <fullName>Call_Center__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Center</label>
    <type>Checkbox</type>
</CustomField>