force-app/main/default/objects/Personnel__c/fields/Door_Knoker__c.field-meta.xml
<CustomField>
    <fullName>Door_Knoker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Door Knocker</label>
    <type>Checkbox</type>
</CustomField>