force-app/main/default/objects/Personnel__c/fields/Event_Sales_Approved__c.field-meta.xml
<CustomField>
    <fullName>Event_Sales_Approved__c</fullName>
    <label>Event Sales Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>