force-app/main/default/objects/Personnel__c/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <formula>if(Sales_MPV__c&gt;5.09,&apos;Below M&apos;,if(Sales_MPV__c&gt;4.01,&apos;M&apos;,if(Sales_MPV__c&gt;3.01,&apos;P&apos;,if(Sales_MPV__c&gt;1.00,&apos;V&apos;,&apos;&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale MPV</label>
    <type>Text</type>
</CustomField>