force-app/main/default/objects/Personnel__c/fields/Gross_Profit_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Percentage__c</fullName>
    <formula>IF( ISBLANK(Sale_MPV_Override__c),
if(Sales_MPV__c&gt;5.09,0,if(Sales_MPV__c&gt;4.01,0.40,if(Sales_MPV__c&gt;3.01,0.45,if(Sales_MPV__c&gt;1.00,0.50,0))))
, Sale_MPV_Override__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sale MPV %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>