force-app/main/default/objects/Personnel__c/fields/Kunnect_ID__c.field-meta.xml
<CustomField>
    <fullName>Kunnect_ID__c</fullName>
    <inlineHelpText>This is a Required field.  If this person does not have a Kunnect account please put &quot;none&quot;</inlineHelpText>
    <label>Kunnect ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>