force-app/main/default/objects/Personnel__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Personnel__c</referenceTo>
    <relationshipLabel>Manager</relationshipLabel>
    <relationshipName>Manager</relationshipName>
    <type>Lookup</type>
</CustomField>