force-app/main/default/objects/Personnel__c/fields/Referral_MPV__c.field-meta.xml
<CustomField>
    <fullName>Referral_MPV__c</fullName>
    <formula>IF(Total_Referrals__c!=0,Referrals_Sold__c / Total_Referrals__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral MPV Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>