force-app/main/default/objects/Personnel__c/fields/Referral_MPV_Letter__c.field-meta.xml
<CustomField>
    <fullName>Referral_MPV_Letter__c</fullName>
    <formula>IF(Referral_MPV__c&lt;0.10,&apos;Below M&apos;,IF(Referral_MPV__c&lt;=0.15,&apos;M&apos;,IF(Referral_MPV__c&lt;0.20,&apos;P&apos;,&apos;V&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral MPV</label>
    <type>Text</type>
</CustomField>