force-app/main/default/objects/Personnel__c/fields/Referral_MPV_Percent__c.field-meta.xml
<CustomField>
    <fullName>Referral_MPV_Percent__c</fullName>
    <formula>IF(Referral_MPV__c&lt;0.10,0.0,IF(Referral_MPV__c&lt;=0.15,0.40,IF(Referral_MPV__c&lt;0.20,0.45,0.50)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referral MPV %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>