force-app/main/default/objects/Personnel__c/fields/Referrals_Sold__c.field-meta.xml
<CustomField>
    <fullName>Referrals_Sold__c</fullName>
    <label>Referrals Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>