force-app/main/default/objects/Personnel__c/fields/Sale_MPV_Override__c.field-meta.xml
<CustomField>
    <fullName>Sale_MPV_Override__c</fullName>
    <label>Sale MPV % Override</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>