force-app/main/default/objects/Personnel__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Rep</label>
    <type>Checkbox</type>
</CustomField>