force-app/main/default/objects/Personnel__c/fields/salesRabbitUserId__c.field-meta.xml
<CustomField>
    <fullName>salesRabbitUserId__c</fullName>
    <label>SalesRabbit User Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>