force-app/main/default/objects/Personnel__c/fields/SF_User__c.field-meta.xml
<CustomField>
    <fullName>SF_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SF User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Personnels2</relationshipName>
    <type>Lookup</type>
</CustomField>