force-app/main/default/objects/Personnel__c/fields/Stride_Id__c.field-meta.xml
<CustomField>
    <fullName>Stride_Id__c</fullName>
    <label>Stride Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>