force-app/main/default/objects/Personnel__c/fields/Stride_MentionName__c.field-meta.xml
<CustomField>
    <fullName>Stride_MentionName__c</fullName>
    <label>Stride @MentionName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>