force-app/main/default/objects/Personnel__c/fields/TO__c.field-meta.xml
<CustomField>
    <fullName>TO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TO</label>
    <type>Checkbox</type>
</CustomField>