force-app/main/default/objects/Personnel__c/fields/Total_Of_Event__c.field-meta.xml
<CustomField>
    <fullName>Total_Of_Event__c</fullName>
    <label>Total Of Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>