force-app/main/default/objects/Personnel__c/fields/Total_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Total_Referrals__c</fullName>
    <label>Total Referrals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>