force-app/main/default/objects/Personnel__c/fields/User_Biography__c.field-meta.xml
<CustomField>
    <fullName>User_Biography__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Biography</label>
    <referenceTo>userBiography__c</referenceTo>
    <relationshipLabel>Personnels</relationshipLabel>
    <relationshipName>Personnels</relationshipName>
    <type>Lookup</type>
</CustomField>