force-app/main/default/objects/Personnel__c/validationRules/Sale_MPV_Override.validationRule-meta.xml
<ValidationRule>
    <fullName>Sale_MPV_Override</fullName>
    <active>true</active>
    <errorConditionFormula>Sale_MPV_Override__c  &gt; 1</errorConditionFormula>
    <errorDisplayField>Sale_MPV_Override__c</errorDisplayField>
    <errorMessage>The Sale MPV % Override must be lower than 1</errorMessage>
</ValidationRule>