force-app/main/default/objects/Personnel__c/listViews/Active.listView-meta.xml
<ListView>
    <fullName>Active</fullName>
    <columns>NAME</columns>
    <columns>Appt_Setter__c</columns>
    <columns>TO__c</columns>
    <columns>Kunnect_ID__c</columns>
    <columns>Active__c</columns>
    <columns>Role__c</columns>
    <columns>Profile__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active</label>
</ListView>