force-app/main/default/objects/Personnel__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Appt_Setter__c</columns>
    <columns>TO__c</columns>
    <columns>Kunnect_ID__c</columns>
    <columns>Active__c</columns>
    <columns>SF_User__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>