force-app/main/default/objects/Personnel__c/listViews/SalesRabbit_users.listView-meta.xml
<ListView>
    <fullName>SalesRabbit_users</fullName>
    <columns>NAME</columns>
    <columns>Full_Name__c</columns>
    <columns>salesRabbitUserId__c</columns>
    <columns>SF_User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>salesRabbitUserId__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>SalesRabbit users</label>
</ListView>